--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 
 <body>
 
-    <h1>Hello World</h1>
+    <div class="wrapper">
+
+        <!-- Sidebar -->
+        <nav id="sidebar">
+            <p>hello</p>
+        </nav>
+
+        <!-- Page Content -->
+        <div id="content">
+            <p>world</p>
+        </div>
+
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
